<resources>
    <string name="app_name">FoodThings</string>
    <string name="sign_out">Sign out</string>
    <string name="tell_your_friends">Tell your friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_services_error">Google Play Services error.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="no_network">No Network Connectivity.</string>
    <string name="network_error">Network error.</string>
    <string name="sign_in_with_google">Sign in with Google…</string>
    <string name="drop_off_sites">FoodScrap Drop Off Sites</string>
    <string name="tap_for_more_details">Tap for more details</string>
    <string name="what_is_food_scraps_food_waste">What is food scraps/food waste?</string>
    <string name="what_answer"><![CDATA[It\'s fruit and vegetable scraps, non-greasy food scraps (rice, pasta, bread, cereal etc.), coffee grounds & filters, tea bags, egg and nut shells, pits, cut or dried flowers, houseplants and potting soil.]]></string>
    <string name="why_recycle">Why recycle food waste to compost?</string>
    <string name="why_answer">Food comprises about 17% of NYC\'s waste stream. When this material is sent to a landfill it contributes to NYCs disposal costs and can create greenhouse gas emissions. When composted, food scraps and other organic waste become a useful product that adds nutrients and improves the quality of soil for street trees, gardens and more.</string>
    <string name="why_recycle_cont">Why recycle food waste at all?</string>
    <string name="why_answer_cont">New York City has shown incredible leadership on food waste recycling to first prevent, then recover, and finally recycle any remaining food with implement government policy and laws along with dedicated and simple organic waste recycling practices.</string>
    <string name="hours_unavailable">Hours are unavailable</string>
    <string name="days_unavailable">Days are unavailable</string>
    <string name="results_returned">Food scrap drop off sites returned</string>
    <string name="skip">Skip</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="food_scrap_drop_off_site_location_details">Drop Off Site Location Details</string>
    <string name="org_unavailable">Organization name unavailable</string>
    <string name="address_unavailable">Address is unavailable</string>
    <string name="postcode_unavailabe">Postcode is unavailable</string>
    <string name="citymap_unavail">CityMap is unavailable.</string>
    <string name="citymap_click">Tap to visit CityMap</string>
    <string name="website_unavail">Website is unavailable.</string>
    <string name="website_click">Tap to visit Website</string>
    <string name="materails_unavail">Materials accepted are unavailable</string>
    <string name="months_unavail">Months of operation are unavailable</string>
    <string name="reqs_unavail">Requirements are unavailable</string>
    <string name="board_unavail">Community board is unavailable</string>
    <string name="council_unavail">Community council is unavailable</string>
    <string name="welcome_to_foodthings">Welcome to FoodThings</string>
    <string name="our_mission">Our Mission</string>
    <string name="about">About</string>
    <string name="favorite_locations">Favorite Locations</string>
    <string name="nearby_map">Nearby on Map</string>
    <string name="tap_anywhere_to_skip">Tap anywhere to skip</string>
</resources>
