<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="productions.darthplagueis.hackathon.abstractclasses.AbstractOnBoardingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/green_food03" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_transparent"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/why_recycle_cont"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_row"
            android:text="@string/why_answer_cont"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/third_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/second_row"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/tap_anywhere_to_continue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>
